--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <a href=""><img src="images/icons/insta.png" alt=""></a>
         </div>
         <div class="footer-column">
-            <h3 class="section-title">Lets Message me</h3>
+            <h3 class="section-title">Lets Message me. Right Now.</h3>
             <form class="contact" action="">
                 <input type="text" placeholder="Your Name">
                 <input type="email" placeholder="Your Email" name="" id="">
